# SEA-demo

./: .gitignore  Home.py  README.md  pyproject.toml  settings.toml
algorithms/: standards.py
benchmarks/: functions.py
pages/: 01-Random_Search.py  02-Hill_Climbing.py
sea_demo/: config.py
sea_demo/codes/: assignment02_fitness.py  assignment02_visualization.py  assignment03_data_retrieval.py  assignment03_visualization.py  assignment04_data_retrieval.py  assignment04_visualization.py  assignment05_heuristic_function.py
sea_demo/data/routes/: city_coordinates.json  route_Bregenz_Eisenstadt.json  route_Bregenz_Graz.json  route_Bregenz_Innsbruck.json  route_Bregenz_Klagenfurt.json  route_Bregenz_Linz.json  route_Bregenz_Salzburg.json  route_Bregenz_St._Pölten.json  route_Bregenz_Vienna.json  route_Eisenstadt_Graz.json  route_Eisenstadt_Innsbruck.json  route_Eisenstadt_Klagenfurt.json  route_Eisenstadt_Linz.json  route_Eisenstadt_Salzburg.json  route_Eisenstadt_St._Pölten.json  route_Eisenstadt_Vienna.json  route_Graz_Vienna.json  route_Innsbruck_Graz.json  route_Innsbruck_Linz.json  route_Innsbruck_Salzburg.json  route_Innsbruck_Vienna.json  route_Klagenfurt_Graz.json  route_Klagenfurt_Innsbruck.json  route_Klagenfurt_Linz.json  route_Klagenfurt_Salzburg.json  route_Klagenfurt_Vienna.json  route_Lienz_Bregenz.json  route_Lienz_Eisenstadt.json  route_Lienz_Graz.json  route_Lienz_Innsbruck.json  route_Lienz_Klagenfurt.json  route_Lienz_Linz.json  route_Lienz_Salzburg.json  route_Lienz_St._Pölten.json  route_Lienz_Vienna.json  route_Linz_Graz.json  (+11 more)
