[project]
name = "sea-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.12",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "openrouteservice>=2.3.3",
    "pandas>=2.3.3",
    "shapely>=2.1.2",
    "streamlit>=1.50.0",
]

[tool.setuptools.packages.find]
include = ["sea_demo"]
